[gd_scene load_steps=43 format=2]

[ext_resource path="res://Assets/Sprites/char_sheet.png" type="Texture" id=1]
[ext_resource path="res://player/Player.gd" type="Script" id=2]
[ext_resource path="res://scripts/FSM/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://player/States/Idle.gd" type="Script" id=4]
[ext_resource path="res://player/States/Jump.gd" type="Script" id=5]
[ext_resource path="res://player/States/Run.gd" type="Script" id=6]
[ext_resource path="res://player/States/Fall.gd" type="Script" id=7]
[ext_resource path="res://player/States/OnWall.gd" type="Script" id=8]
[ext_resource path="res://player/States/WallJump.gd" type="Script" id=9]
[ext_resource path="res://player/Gun/Gun.tscn" type="PackedScene" id=10]
[ext_resource path="res://player/States/Dash.gd" type="Script" id=11]
[ext_resource path="res://player/States/Float.gd" type="Script" id=12]
[ext_resource path="res://player/States/NoControl.gd" type="Script" id=13]
[ext_resource path="res://Assets/sfx/step.wav" type="AudioStream" id=14]
[ext_resource path="res://player/AnimatedGhost.gd" type="Script" id=15]
[ext_resource path="res://Assets/sfx/jump.wav" type="AudioStream" id=16]
[ext_resource path="res://Assets/sfx/land1.wav" type="AudioStream" id=17]
[ext_resource path="res://Assets/sfx/dash.wav" type="AudioStream" id=18]
[ext_resource path="res://Assets/sfx/cantdo.wav" type="AudioStream" id=19]
[ext_resource path="res://Particles/charge.tres" type="Material" id=20]

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 12, 12 )

[sub_resource type="SegmentShape2D" id=29]
a = Vector2( 16, -16 )
b = Vector2( 16, 12 )

[sub_resource type="SegmentShape2D" id=30]
a = Vector2( -16, 12 )
b = Vector2( -16, -16 )

[sub_resource type="SegmentShape2D" id=31]
a = Vector2( -16, 12 )
b = Vector2( 16, 12 )

[sub_resource type="SegmentShape2D" id=32]
a = Vector2( -16, -16 )
b = Vector2( 16, -16 )

[sub_resource type="RectangleShape2D" id=33]
extents = Vector2( 16, 4 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 8, 7 )

[sub_resource type="Animation" id=8]
resource_name = "Dash"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}

[sub_resource type="Animation" id=16]
resource_name = "Die"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "Fall"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Jump"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
resource_name = "Run"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Wall"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="Animation" id=15]
resource_name = "Win"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 13, 14, 13, 14 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, 3 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "Blink"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.25098 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.25098 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.25098 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.25098 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.25098 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "Land"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 4, 2 ), Vector2( 3, 3 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "Land_side"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 3.7, 2.5 ), Vector2( 3, 3 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "Launch"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 4 ), Vector2( 3, 3 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "Launch_side"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2.5, 3.7 ), Vector2( 3, 3 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, 3 ) ]
}

[node name="Player" type="KinematicBody2D"]
collision_mask = 8
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="PhyscisHitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 18 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -12 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
hframes = 4
vframes = 5
region_enabled = true
region_rect = Rect2( 0, 0, 64, 80 )
script = ExtResource( 15 )
spawn_rate = 32.0

[node name="GhostSpawTimer" type="Timer" parent="Sprite"]

[node name="Body" type="Node2D" parent="."]

[node name="Gun" parent="Body" instance=ExtResource( 10 )]
position = Vector2( 0, -2 )

[node name="DashArea" type="Area2D" parent="." groups=["bullet"]]
collision_layer = 2
collision_mask = 0
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DashArea"]
shape = SubResource( 29 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DashArea"]
shape = SubResource( 30 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="DashArea"]
shape = SubResource( 31 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="DashArea"]
shape = SubResource( 32 )

[node name="StepArea" type="Area2D" parent="." groups=["bullet"]]
collision_layer = 2
collision_mask = 4
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="StepArea"]
position = Vector2( 0, 12 )
shape = SubResource( 33 )

[node name="Hitbox" type="Area2D" parent="." groups=["player"]]
collision_layer = 0
collision_mask = 20

[node name="HitboxCollision" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, -3 )
shape = SubResource( 20 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )
initial_state = NodePath("NoControl")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Fall" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="CoyoteTimer" type="Timer" parent="StateMachine/Fall"]
wait_time = 0.1
one_shot = true

[node name="InputBufferTimer" type="Timer" parent="StateMachine/Fall"]
wait_time = 0.1
one_shot = true

[node name="OnWall" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="ReleaseTimer" type="Timer" parent="StateMachine/OnWall"]
wait_time = 0.05
one_shot = true

[node name="WallJump" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="Dash" type="Node" parent="StateMachine"]
script = ExtResource( 11 )

[node name="DashTimer" type="Timer" parent="StateMachine/Dash"]
wait_time = 0.15
one_shot = true

[node name="HoldTimer" type="Timer" parent="StateMachine/Dash"]
wait_time = 0.5
one_shot = true

[node name="Float" type="Node" parent="StateMachine"]
script = ExtResource( 12 )

[node name="HoldTimer" type="Timer" parent="StateMachine/Float"]
wait_time = 0.5
one_shot = true

[node name="NoControl" type="Node" parent="StateMachine"]
script = ExtResource( 13 )

[node name="ChargingParticle" type="Particles2D" parent="."]
emitting = false
amount = 12
lifetime = 0.5
fract_delta = false
local_coords = false
process_material = ExtResource( 20 )

[node name="Tween" type="Tween" parent="."]

[node name="DashCooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Anim" type="AnimationPlayer" parent="."]
anims/Dash = SubResource( 8 )
anims/Die = SubResource( 16 )
anims/Fall = SubResource( 3 )
anims/Idle = SubResource( 4 )
anims/Jump = SubResource( 5 )
anims/RESET = SubResource( 6 )
anims/Run = SubResource( 7 )
anims/Wall = SubResource( 9 )
anims/Win = SubResource( 15 )

[node name="Anim_FX" type="AnimationPlayer" parent="."]
anims/Blink = SubResource( 17 )
anims/Land = SubResource( 10 )
anims/Land_side = SubResource( 11 )
anims/Launch = SubResource( 12 )
anims/Launch_side = SubResource( 14 )
anims/RESET = SubResource( 13 )

[node name="StepSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
bus = "SFX"

[node name="JumpSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
bus = "SFX"

[node name="LandSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
bus = "SFX"

[node name="DashSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
pitch_scale = 2.0
bus = "SFX"

[node name="CantdoSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
bus = "SFX"

[connection signal="timeout" from="Sprite/GhostSpawTimer" to="Sprite" method="_on_GhostSpawTimer_timeout"]
[connection signal="area_entered" from="StepArea" to="." method="_on_StepArea_area_entered"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="StateMachine/OnWall/ReleaseTimer" to="StateMachine/OnWall" method="_on_ReleaseTimer_timeout"]
[connection signal="timeout" from="StateMachine/Dash/DashTimer" to="StateMachine/Dash" method="_on_DashTimer_timeout"]
[connection signal="timeout" from="StateMachine/Dash/HoldTimer" to="StateMachine/Dash" method="_dash"]
[connection signal="timeout" from="StateMachine/Float/HoldTimer" to="StateMachine/Float" method="_go_to_next_state"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_DashCooldown_timeout"]
[connection signal="animation_finished" from="Anim" to="StateMachine/NoControl" method="_on_Anim_animation_finished"]
[connection signal="animation_finished" from="Anim_FX" to="StateMachine/NoControl" method="_on_Anim_FX_animation_finished"]
[connection signal="finished" from="StepSFX" to="StateMachine/Run" method="_on_Step_finished"]
